--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       - POSTGRES_PASSWORD=password
     ports:
       - 5432:5432
-#    volumes:
-#      - ./database/init.sql:/docker-entrypoint-initdb.d
+    volumes:
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
