fix: rename database traindemo->TrainDemo

--- a/TrainSystem/src/main/resources/application.properties
+++ b/TrainSystem/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.open-in-view=@spring.jpa.open-in-view@
 spring.jpa.hibernate.ddl-auto=none
 
 # Database connection settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/traindemo
+spring.datasource.url=jdbc:postgresql://localhost:5432/TrainDemo
 spring.datasource.username=postgres
 spring.datasource.password=password
 
