feat: share .m2 repo with host to cache build dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - traindb
     environment:
       POSTGRES_PASSWORD: password
+    volumes:
+      - ~/.m2:/root/.m2
   traindb:
     image: postgres
     environment:
