docker: added TrainSystem as volume to cut down on build time

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: password
     volumes:
+      - ./TrainSystem:/app/
       - ~/.m2:/root/.m2
   traindb:
     image: postgres
