feat: added wait-for-postgres.sh

--- a/TrainSystem/Dockerfile
+++ b/TrainSystem/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3.6.2
+RUN apt-get update && apt-get install postgresql-client -y
 WORKDIR /app
 COPY . .
-#RUN sh wait-for-postgres.sh traindb mvn clean package
-CMD mvn clean package
-ENTRYPOINT java -jar target/TrainDemo-0.0.1-SNAPSHOT.jar
+CMD sh wait-for-postgres.sh mvn clean package
+ENTRYPOINT sh wait-for-postgres.sh java -jar target/TrainDemo-0.0.1-SNAPSHOT.jar
