--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_DB: traindb
       POSTGRES_PASSWORD: password
     volumes:
-      - ./TrainSystem:/app/
+      - .:/app/
       - ~/.m2:/root/.m2
     ports:
       - 8080:8080
