--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Set default values to disable warnings
+spring.profiles.active=@spring.profiles.active@
+spring.jpa.open-in-view=@spring.jpa.open-in-view@
 # Do not update schema on the fly
 spring.jpa.hibernate.ddl-auto=none
 
