config: add property to avoid crashing when db is down

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=@spring.profiles.active@
 spring.jpa.open-in-view=@spring.jpa.open-in-view@
 # Do not update schema on the fly
 spring.jpa.hibernate.ddl-auto=none
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Database connection settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/TrainDemo
 spring.datasource.username=postgres
