--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 # Spring Security config
-spring.security.oauth2.client.registration.github.client-id=
-spring.security.oauth2.client.registration.github.client-secret=
+spring.security.oauth2.client.registration.github.client-id=<FILL-ME-IN>
+spring.security.oauth2.client.registration.github.client-secret=<FILL-ME-IN>
 # spring.security.oauth2.client.registration.google.client-id=
 # spring.security.oauth2.client.registration.google.client-secret=
